# artifacts/api-server/src/routes/index.ts
@@ -1,10 +1,12 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
 import geminiRouter from "./gemini";
+import recommendationsRouter from "./recommendations";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
 router.use(geminiRouter);
+router.use(recommendationsRouter);
 
 export default router;
